cluster/manifests/audiobookshelf/audiobookshelf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/name: audiobookshelf
