cluster/manifests/audiobookshelf/audiobookshelf-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  entryPoints:
  - privateweb
  - privatesecure
  - wgweb
  - wgsecure
  routes:
  - kind: Rule
    match: Host(`audiobookshelf.lan.ftzmlab.xyz`)
    services:
    - name: audiobookshelf
      port: 80
  tls: {}
